update base url

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.com
+baseURL: https://the-catch22-attack.github.io/
 languageCode: en-us
 defaultContentLanguage: en
 title: Cupper
